# inverse-vision

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  make_pptx.py  pyproject.toml  report.txt  requirements-notebooks.txt  requirements.txt  setup.py  ~$presentation.pptx
.github/workflows/: ci.yml
articles/: RRUnet_article.txt  multi_atlas_cardiac_pet.txt
configs/: ct_experiments.yaml  mri_denoising.yaml
ct_reconstruction/: __init__.py  evaluation_metrics.py  filters.py  forward_projection.py  noise_models.py  phantom.py  reconstruction_fbp.py  reconstruction_iterative.py  sinogram.py
docs/: conf.py  index.rst  modules.rst
experiments/: run_ct_experiments.py  run_mri_experiments.py
mri_denoising/: __init__.py  butterworth_filter.py  coil_combination.py  denoising_filters.py  kspace_visualization.py  load_kspace.py  reconstruction_fft.py
notebooks/: exercise_1.1.ipynb  exercise_1.2.ipynb  exercise_2.1_2.2.ipynb  noisy_sinograms.npz  save_ex11_figures.py  save_ex12_fig2_only.py  save_ex12_figures.py  save_ex21_ex22_figures.py
report/: report.txt
segmentation_review/: paper_analysis.md
tests/: test_ct.py  test_mri.py
