[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-imaging-coursework"
version = "0.1.0"
description = "CT reconstruction and MRI denoising — MPhil DIS Cambridge coursework."
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=2.2",
    "scipy>=1.15",
    "scikit-image>=0.25",
    "matplotlib>=3.10",
    "pandas>=2.3",
    "PyYAML>=6.0",
    "tqdm>=4.67",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.9",
    "black>=25.0",
    "pre-commit>=4.0",
]
notebooks = [
    "ipykernel>=6",
    "jupyterlab>=4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E203"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["ct_reconstruction*", "mri_denoising*"]
